# blueprint

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cookiecutter.json  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pre-commit-config.yaml  pyproject.toml
